ping-pong/manifests/ping-pong/ping-pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong-svc
spec:
  type: LoadBalancer
  selector:
    app: ping-pong    # This is the app as declared in the deployment.
  ports:
    - port: 2507        # This is the port that the service will expose.
      protocol: TCP
      targetPort: 3000  # This is the target port
