ping-pong/manifests/ping-pong/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: exercises
  labels:
    app: postgres-svc
spec:
  ports:
  - port: 5432
    name: database
    targetPort: 5432
  clusterIP: None
  selector:
    app: postgresapp
