ping-pong/manifests/ping-pong/ping-pong-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ping-pong-route
  namespace: exercises
spec:
  parentRefs:
  - name: k8s-nsa2-gateway
    namespace: nsa2
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /pingpong
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: ping-pong-svc
      port: 2507
  - matches:
    - path:
        type: PathPrefix
        value: /pings
    backendRefs:
    - name: ping-pong-svc
      port: 2507
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: log-output-svc
      port: 2506
